crates/sui-prover/tests/snapshots/spec_dynamic_field/spec_dynamic_object_check.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 128
expression: output
---
exiting with bytecode transformation errors
error: Function uses unsupported dynamic fields
   ┌─ tests/inputs/spec_dynamic_field/spec_dynamic_object_check.move:23:18
   │
23 │         requires(ofield::exists_with_type<vector<u8>, DFOChild>(&x.id, b"dfochild"));
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
